change default fileformat in config

--- a/retropie-builder.cfg
+++ b/retropie-builder.cfg
@@ -3,6 +3,7 @@
     "dev_path": "/dev/sdc",
     "mount_path": "/mnt/rpi",
     "temp_path": "/tmp/rpi/",
+    "filesystem": "ext4",
     "expand": true,
     "leave_free": "10"
   },
