readme/cfg - update links and counts

--- a/retropie-builder.cfg
+++ b/retropie-builder.cfg
@@ -24,7 +24,7 @@
       "rm_extracted": true
     },
     "amiga": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Commodore%20-%20Amiga.zip"],
+      "rom_uris": ["https://archive.org/download/Commodore_Amiga_TOSEC_2012_04_10/Commodore_Amiga_TOSEC_2012_04_10.zip"],
       "rpi_path": "amiga",
       "md5": "",
       "extensions": ["adf"],
@@ -60,7 +60,7 @@
       "rm_extracted": false
     },
     "atari 5200": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Atari%20-%205200.zip"],
+      "rom_uris": ["https://archive.org/download/Atari5200_201602/Atari%20-%205200.rar"],
       "rpi_path": "atari5200",
       "md5": "",
       "extensions": ["bin", "a52", "bas", "xex", "atr", "xfd", "dcm", "atr.gz", "xfd.gz"],
@@ -69,7 +69,7 @@
       "rm_extracted": true
     },
     "atari 7800": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Atari%20-%207800.zip"],
+      "rom_uris": ["https://archive.org/download/Atari7800/Atari%20-%207800.rar"],
       "rpi_path": "atari7800",
       "md5": "",
       "extensions": ["bin", "a78"],
@@ -78,7 +78,7 @@
       "rm_extracted": true
     },
     "atari jaguar": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Atari%20-%20Jaguar.zip"],
+      "rom_uris": ["https://archive.org/download/AtariJaguar/Atari%20-%20-Jaguar.rar"],
       "rpi_path": "atarijaguar",
       "md5": "",
       "extensions": ["j64", "jag"],
@@ -87,7 +87,7 @@
       "rm_extracted": true
     },
     "atari lynx": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Atari%20-%20Lynx.zip"],
+      "rom_uris": ["https://archive.org/download/AtariLynx_20160404/Atari%20Lynx.rar"],
       "rpi_path": "atarilynx",
       "md5": "",
       "extensions": ["lnx"],
@@ -96,7 +96,7 @@
       "rm_extracted": true
     },
     "atari st": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Atari%20-%20ST.zip"],
+      "rom_uris": ["https://archive.org/download/AtariST_201602/Atari%20-%20ST.rar"],
       "rpi_path": "atarist",
       "md5": "",
       "extensions": ["st", "stx", "img", "rom", "raw", "ipf", "ctf"],
@@ -114,7 +114,7 @@
       "rm_extracted": true
     },
     "coleco vision": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Coleco%20-%20ColecoVision.zip"],
+      "rom_uris": ["https://archive.org/download/ColecoColecoVision_201602/Coleco%20-%20ColecoVision.rar"],
       "rpi_path": "coleco",
       "md5": "",
       "extensions": ["bin", "col", "rom", "zip"],
@@ -151,6 +151,7 @@
     },
     "dreamcast": {
       "rom_uris": [
+        "https://archive.org/details/@retroboxtvsegadreamcast",
         "https://archive.org/download/DreamcastA/Dreamcast%20A.rar",
         "https://archive.org/download/DreamcastB/Dreamcast%20B.rar",
         "https://archive.org/download/DreamcastC/Dreamcast%20C.rar",
@@ -240,7 +241,7 @@
       "rm_extracted": true
     },
     "game gear": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Sega%20-%20Game%20Gear.zip"],
+      "rom_uris": ["https://archive.org/download/GameGear/Game%20gear.zip"],
       "rpi_path": "gamegear",
       "md5": "",
       "extensions": ["gg"],
@@ -267,7 +268,7 @@
       "rm_extracted": true
     },
     "game boy advance": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03/Nintendo-GameBoyAdvancee-cards.zip"],
+      "rom_uris": ["https://archive.org/download/r_GBA/GBA.rar"],
       "rpi_path": "gba",
       "md5": "",
       "extensions": ["gba"],
@@ -375,7 +376,7 @@
       "rm_extracted": true
     },
     "advancemame": {
-      "rom_uris": [""],
+      "rom_uris": ["https://archive.org/download/MAME0.106-Reference-Set-ROMs-CHDs-Samples"],
       "rpi_path": "mame-advmame",
       "md5": "",
       "extensions": ["zip"],
@@ -384,7 +385,7 @@
       "rm_extracted": true
     },
     "mame4all": {
-      "rom_uris": [""],
+      "rom_uris": ["https://archive.org/download/MAME0.37b5_MAME2000_Reference_Set_Update_2_ROMs_Samples"],
       "rpi_path": "mame-mame4all",
       "md5": "",
       "extensions": ["zip"],
@@ -393,7 +394,7 @@
       "rm_extracted": true
     },
     "mame2000": {
-      "rom_uris": ["https://archive.org/download/MAME0.37b5-MAME2000-ROMSet/Mame0.37b5Non-merged.zip"],
+      "rom_uris": ["https://archive.org/download/MAME0.37b5_MAME2000_Reference_Set_Update_2_ROMs_Samples"],
       "rpi_path": "mame-libretro",
       "md5": "",
       "extensions": ["zip"],
@@ -402,7 +403,7 @@
       "rm_extracted": true
     },
     "mame2003": {
-      "rom_uris": ["https://archive.org/details/MAME0.78-MAME2003-ROMs-CHDs-Samples"],
+      "rom_uris": ["https://archive.org/download/MAME2003_Reference_Set_MAME0.78_ROMs_CHDs_Samples"],
       "rpi_path": "mame-libretro",
       "md5": "",
       "extensions": ["zip"],
@@ -411,7 +412,7 @@
       "rm_extracted": true
     },
     "mame2010": {
-      "rom_uris": ["https://archive.org/download/MAME0.139_MAME2010_Reference_Set_ROMs_CHDs_Samples/resume.tar.gz"],
+      "rom_uris": ["https://archive.org/download/MAME0.139_MAME2010_Reference_Set_ROMs_CHDs_Samples"],
       "rpi_path": "mame-libretro",
       "md5": "",
       "extensions": ["zip"],
@@ -420,7 +421,7 @@
       "rm_extracted": true
     },
     "msx": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Microsoft%20-%20MSX.zip", "https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Microsoft%20-%20MSX%202.zip"],
+      "rom_uris": ["https://archive.org/download/MSX_MSX_TOSEC_2012_04_23/MSX_MSX_TOSEC_2012_04_23.zip"],
       "rpi_path": "msx",
       "md5": "",
       "extensions": ["rom", "mx1", "mx2", "col", "dsk"],
@@ -443,7 +444,7 @@
       "rm_extracted": true
     },
     "neo geo pocket": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/SNK%20-%20Neo%20Geo%20Pocket.zip"],
+      "rom_uris": ["https://archive.org/download/SNKNeoGeoPocket/SNK%20-%20Neo%20Geo%20Pocket.rar"],
       "rpi_path": "ngp",
       "md5": "",
       "extensions": ["ngp"],
@@ -452,7 +453,7 @@
       "rm_extracted": true
     },
     "neo geo pocket color": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/SNK%20-%20Neo%20Geo%20Pocket%20Color.zip"],
+      "rom_uris": ["https://archive.org/download/SNKNeoGeoPocketColor/SNK%20-%20Neo%20Geo%20Pocket%20Color.rar"],
       "rpi_path": "ngpc",
       "md5": "",
       "extensions": ["ngc"],
@@ -484,7 +485,7 @@
       "md5": ["023cd783c6c83994295b67d189988ab6"],
       "extensions": ["zip", "nes", "smc", "sfc", "fig", "swc", "mgd"],
       "dl_all_b4_extract": false,
-      "cp_to_sd": true,
+      "cp_to_sd": false,
       "rm_extracted": true
     },
     "oric atmos": {
@@ -506,7 +507,7 @@
       "rm_extracted": true
     },
     "turbografx-16": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/NEC%20-%20PC%20Engine%20-%20TurboGrafx%2016.zip"],
+      "rom_uris": ["https://archive.org/download/NEC_PC-Engine_TurboGrafx-16_TOSEC_2012-04-23/NEC_PC-Engine_TurboGrafix-16_TOSEC_2012-04-23.zip"],
       "rpi_path": "pcengine",
       "md5": "",
       "extensions": ["pce", "cue", "zip"],
@@ -596,7 +597,7 @@
       "rm_extracted": true
     },
     "sega sg-1000": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Sega%20-%20SG-1000.zip"],
+      "rom_uris": ["https://archive.org/download/SegaSG1000/Sega%20-%20SG-1000.rar"],
       "rpi_path": "sg-1000",
       "md5": "",
       "extensions": ["sg", "zip"],
@@ -645,7 +646,7 @@
       "rm_extracted": true
     },
     "vectrex": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/GCE%20-%20Vectrex.zip"],
+      "rom_uris": ["https://archive.org/download/GCEVectrex/GCE%20-%20Vectrex.rar"],
       "rpi_path": "vectrex",
       "md5": "",
       "extensions": ["vec", "gam", "bin"],
@@ -654,7 +655,7 @@
       "rm_extracted": true
     },
     "videopac": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Philips%20-%20Videopac%2b.zip"],
+      "rom_uris": ["https://archive.org/download/Philips_Videopac_Plus_TOSEC_2012_04_23/Philips_Videopac_Plus_TOSEC_2012_04_23.zip"],
       "rpi_path": "videopac",
       "md5": "",
       "extensions": ["bin"],
@@ -663,7 +664,7 @@
       "rm_extracted": true
     },
     "virtual boy": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Nintendo%20-%20Virtual%20Boy.zip"],
+      "rom_uris": ["https://archive.org/download/NintendoVirtualBoy/Nintendo%20-%20Virtual%20Boy.rar"],
       "rpi_path": "virtualboy",
       "md5": "",
       "extensions": ["vb"],
@@ -681,7 +682,7 @@
       "rm_extracted": true
     },
     "wonderswan": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Bandai%20-%20WonderSwan.zip"],
+      "rom_uris": ["https://archive.org/download/Bandai_Wonderswan_TOSEC_2012_04_23/Bandai_Wonderswan_TOSEC_2012_04_23.zip"],
       "rpi_path": "wonderswan",
       "md5": "",
       "extensions": ["ws"],
@@ -690,7 +691,7 @@
       "rm_extracted": true
     },
     "wonderswan color": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Bandai%20-%20WonderSwan%20Color.zip"],
+      "rom_uris": ["https://archive.org/download/Bandai_Wonderswan_Color_TOSEC_2012_04_23/Bandai_Wonderswan_Color_TOSEC_2012_04_23.zip"],
       "rpi_path": "wonderswancolor",
       "md5": "",
       "extensions": ["wsc"],
@@ -708,7 +709,7 @@
       "rm_extracted": true
     },
     "zx spectrum": {
-      "rom_uris": ["https://archive.org/download/No-Intro-Collection_2016-01-03_Fixed/Sinclair%20-%20ZX%20Spectrum%20%2b3.zip"],
+      "rom_uris": ["https://archive.org/download/Sinclair_ZX_Spectrum_TOSEC_2012_04_23/Sinclair_ZX_Spectrum_TOSEC_2012_04_23.zip"],
       "rpi_path": "zxspectrum",
       "md5": "",
       "extensions": ["sna", "szx", "z80", "tap", "tzx", "gz", "udi", "mgmt", "img", "trd", "scl", "dsk"],
